# 3D-Engine

./: Makefile  README.md  RelatórioCG.docx  box.xml  cone.xml  config.xml  creeper.xml  cylinder.xml  generator.cpp  makefile  plane.xml  ruby.xml  solar_system.xml  sphere.xml  teapot.xml  torus.xml
headers/: shapes.h  vertex.h
report/: RelatórioCG_Fase2.docx  RelatórioCG_Fase4.docx  RelatórioFase3.docx  oi_gostoso.docx
shapes/: asteroids1.3d  asteroids2.3d  box.3d  boxCreeper.3d  cone.3d  crown.2d  cylinder.3d  eye.2d  orbitsGas.2d  orbitsRoc.2d  plane.2d  planeCreeper.2d  planeSPOT.2d  ruby.3d  sphere.3d  sphereLuas.3d  sphereRochosos.3d  teapot.3d  torus.3d
src/: CMakeLists.txt  engine.cpp  file.cpp  generator.cpp  group.cpp  light.cpp  lights.cpp  shapes.cpp  transforms.cpp  vertex.cpp  xmlParser.cpp
src/headers/: file.h  group.h  light.h  lights.h  shapes.h  transforms.h  vertex.h  xmlParser.h
src/tinyxml2/: CMakeLists.txt  xmltest.cpp
